# AppImageLauncherFS

./: .travis.yml  CMakeLists.txt  README.md
cmake/: install.cmake
resources/: appimagelauncherfs.service.in
src/: CMakeLists.txt  error.h  fs.cpp  fs.h
travis/: build-appimage.sh
